--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -20,6 +20,7 @@
          on how to target different products -->
 
     <depends>com.intellij.modules.all</depends>
+    <depends>Git4Idea</depends>
 
 
     <extensions defaultExtensionNs="com.intellij">
